--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,9 @@ version: '3.7'
 
 services:
   chessboard:
-    build: ./
+    build:
+      context: ./
+      dockerfile: ./docker/Dockerfile.dev-container
     volumes:
       - ./:/app
     stdin_open: true
